Updated the database model to save the entire last population.

--- a/GeneticAlgNetControl/Pages/Details.cshtml
+++ b/GeneticAlgNetControl/Pages/Details.cshtml
@@ -63,7 +63,7 @@
         }
     </div>
 </div>
-@if (Model.View.Algorithm.LastPopulation.Any(item => item.Any()))
+@if (Model.View.Algorithm.Population != null)
 {
     <div class="row h4">
         <div class="col-1 text-center">
